# trello-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trello_mcp/: __init__.py  __main__.py  config.py  errors.py  models.py  schemas.py  server.py  trello_client.py
tests/: conftest.py  test_config.py  test_get_comments.py  test_schemas.py  test_server_smoke.py  test_trello_client.py
tests/e2e/: test_e2e_cards.py  test_e2e_comments.py  test_e2e_placeholder.py
